--- a/translation/fr/sekha/sutta/an/an11/an11.310-357_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.310-357_translation-fr-sekha.json
@@ -8,5 +8,6 @@
   "an11.310-357:1.3": "par rapport à l’intention liée aux sons (…)",
   "an11.310-357:1.4": "par rapport à l’intention liée aux odeurs (…)",
   "an11.310-357:1.5": "par rapport à l’intention liée aux saveurs (…)",
-  "an11.310-357:1.6": "par rapport à l’intention liée aux sensations corporelles (…)"
+  "an11.310-357:1.6": "par rapport à l’intention liée aux sensations corporelles (…)",
+  "an11.310-357:1.7": "par rapport à l’intention liée aux phénomènes mentaux (…)"
 }
