--- a/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
@@ -1,5 +1,6 @@
 {
   "an11.358-405:0.1": "Discours Sous Forme De Listes 11.358–405",
   "an11.358-405:0.2": "Premier groupe de cinquante discours",
-  "an11.358-405:0.3": "Similarité"
+  "an11.358-405:0.3": "Similarité",
+  "an11.358-405:0.4": "Discours sur la Soif de formes visibles etc."
 }
