--- a/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
@@ -5,5 +5,6 @@
   "an11.358-405:0.4": "Discours sur la Soif de formes visibles etc.",
   "an11.358-405:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.358-405:1.2": "(…) par rapport à la Soif de formes visibles (…)",
-  "an11.358-405:1.3": "par rapport à la Soif de sons (…)"
+  "an11.358-405:1.3": "par rapport à la Soif de sons (…)",
+  "an11.358-405:1.4": "par rapport à la Soif d’odeurs (…)"
 }
