--- a/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.358-405_translation-fr-sekha.json
@@ -7,5 +7,7 @@
   "an11.358-405:1.2": "(…) par rapport à la Soif de formes visibles (…)",
   "an11.358-405:1.3": "par rapport à la Soif de sons (…)",
   "an11.358-405:1.4": "par rapport à la Soif d’odeurs (…)",
-  "an11.358-405:1.5": "par rapport à la Soif de saveurs (…)"
+  "an11.358-405:1.5": "par rapport à la Soif de saveurs (…)",
+  "an11.358-405:1.6": "par rapport à la Soif de sensations corporelles (…)",
+  "an11.358-405:1.7": "par rapport à la Soif de phénomènes mentaux (…)"
 }
