--- a/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "an11.406-453:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.406-453:1.2": "(…) dans les pensées liées aux formes visibles (…)",
   "an11.406-453:1.3": "dans les pensées liées aux sons (…)",
-  "an11.406-453:1.4": "dans les pensées liées aux odeurs (…)"
+  "an11.406-453:1.4": "dans les pensées liées aux odeurs (…)",
+  "an11.406-453:1.5": "dans les pensées liées aux saveurs (…)"
 }
