--- a/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "an11.454-501:0.1": "Discours Sous Forme De Listes 11.454–501",
-  "an11.454-501:0.2": "Premier groupe de cinquante discours"
+  "an11.454-501:0.2": "Premier groupe de cinquante discours",
+  "an11.454-501:0.3": "Similarité"
 }
