--- a/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
@@ -8,5 +8,6 @@
   "an11.454-501:1.5": "dans les réflexions liées aux saveurs (…)",
   "an11.454-501:1.6": "dans les réflexions liées aux sensations corporelles (…)",
   "an11.454-501:1.7": "de rester à observer l’impermanence dans les réflexions liées aux phénomènes mentaux (…)",
-  "an11.454-501:1.8": "de rester à observer l’insatisfaisance (…)"
+  "an11.454-501:1.8": "de rester à observer l’insatisfaisance (…)",
+  "an11.454-501:1.9": "de rester à observer le sans-propriétaire (…)"
 }
