--- a/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
@@ -12,5 +12,6 @@
   "an11.454-501:1.9": "de rester à observer le sans-propriétaire (…)",
   "an11.454-501:1.10": "de rester à observer la destruction (…)",
   "an11.454-501:1.11": "de rester à observer l’arrêt (…)",
-  "an11.454-501:1.12": "de rester à observer la disparition (…)"
+  "an11.454-501:1.12": "de rester à observer la disparition (…)",
+  "an11.454-501:1.13": "de rester à observer la cessation (…)"
 }
