--- a/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
@@ -2,6 +2,7 @@
   "an11.454-501:0.1": "Discours Sous Forme De Listes 11.454–501",
   "an11.454-501:0.2": "Premier groupe de cinquante discours",
   "an11.454-501:0.3": "Similarité",
+  "an11.454-501:0.4": "Discours sur les réflexions liées aux formes visibles etc.",
   "an11.454-501:1.2": "(…) dans les réflexions liées aux formes visibles (…)",
   "an11.454-501:1.3": "dans les réflexions liées aux sons (…)",
   "an11.454-501:1.4": "dans les réflexions liées aux odeurs (…)",
