--- a/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
@@ -6,5 +6,6 @@
   "an11.502-981:1.1": "Mendiants, un bouvier doué de onze caractéristiques est capable de s’occuper d’un troupeau de vaches et de le faire croître.",
   "an11.502-981:1.2": "Quelles sont ces onze ?",
   "an11.502-981:1.3": "En cela, mendiants, le bouvier connaît les formes (…)",
-  "an11.502-981:2.1": "De la même manière, mendiants, un mendiant doué de onze caractéristiques est capable de rester à observer l’impermanence dans l’œil (…)"
+  "an11.502-981:2.1": "De la même manière, mendiants, un mendiant doué de onze caractéristiques est capable de rester à observer l’impermanence dans l’œil (…)",
+  "an11.502-981:2.2": "(…)"
 }
