--- a/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.502-981_translation-fr-sekha.json
@@ -7,5 +7,6 @@
   "an11.502-981:1.2": "Quelles sont ces onze ?",
   "an11.502-981:1.3": "En cela, mendiants, le bouvier connaît les formes (…)",
   "an11.502-981:2.1": "De la même manière, mendiants, un mendiant doué de onze caractéristiques est capable de rester à observer l’impermanence dans l’œil (…)",
-  "an11.502-981:2.2": "(…)"
+  "an11.502-981:2.2": "(…)",
+  "an11.502-981:2.3": "de rester à observer la renonciation (…)"
 }
