--- a/translation/fr/sekha/sutta/an/an11/an11.982_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.982_translation-fr-sekha.json
@@ -2,5 +2,6 @@
   "an11.982:0.1": "Discours Sous Forme De Listes 11.982",
   "an11.982:0.2": "Premier groupe de cinquante discours",
   "an11.982:0.3": "Série de répétitions sur l’avidité",
-  "an11.982:0.4": "Discours sur l’avidité"
+  "an11.982:0.4": "Discours sur l’avidité",
+  "an11.982:1.1": "Mendiants, pour la compréhension complète de l’avidité, onze états devraient être développés."
 }
