--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -324,7 +324,7 @@
   "pli-tv-kd10:3.1.42": "Wander alone and do no bad, ",
   "pli-tv-kd10:3.1.43": "Unconcerned, like a mighty elephant in the forest.” ",
   "pli-tv-kd10:4.1.0": "3. The account of going to Bālakaloṇaka ",
-  "pli-tv-kd10:4.1.1": "After speaking these verses while standing in the midst of the Sangha, the Buddha went to the village of Bālakaloṇaka. ",
+  "pli-tv-kd10:4.1.1": "After speaking these verses, the Buddha went to the village of Bālakaloṇaka. ",
   "pli-tv-kd10:4.1.2": "At that time Venerable Bhagu was staying near that village. ",
   "pli-tv-kd10:4.1.3": "When Bhagu saw the Buddha coming, he prepared a seat and set out a foot stool, a foot scraper, and water for washing the feet. He then went out to meet the Buddha, receiving his bowl and robe. ",
   "pli-tv-kd10:4.1.4": "The Buddha sat down on the prepared seat and washed his feet. ",
