--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -340,7 +340,7 @@
   "pli-tv-kd10:4.2.2": "The park keeper saw the Buddha coming and said to him, ",
   "pli-tv-kd10:4.2.3": "“Ascetic, don’t enter this park. ",
   "pli-tv-kd10:4.2.4": "There are three gentlemen here, practicing for their own good. ",
-  "pli-tv-kd10:4.2.5": "Don’t disturb them.” ",
+  "pli-tv-kd10:4.2.5": "Please, don’t disturb them.” ",
   "pli-tv-kd10:4.2.6": "When Anuruddha heard the park keeper advising the Buddha, he said, ",
   "pli-tv-kd10:4.2.7": "“Please don’t block the Buddha. ",
   "pli-tv-kd10:4.2.8": "It’s our teacher who has arrived.” ",
