--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -343,7 +343,7 @@
   "pli-tv-kd10:4.2.5": "Please, don’t disturb them.” ",
   "pli-tv-kd10:4.2.6": "When Anuruddha heard the park keeper advising the Buddha, he said, ",
   "pli-tv-kd10:4.2.7": "“Please don’t block the Buddha. ",
-  "pli-tv-kd10:4.2.8": "It’s our teacher who has arrived.” ",
+  "pli-tv-kd10:4.2.8": "It’s our teacher who’s arrived.” ",
   "pli-tv-kd10:4.2.9": "Anuruddha then went to Nandiya and Kimila and said, ",
   "pli-tv-kd10:4.2.10": "“Come out, Venerables, our teacher has arrived.” ",
   "pli-tv-kd10:4.3.1": "The three of them went out to meet the Buddha. One received his bowl and robe, one prepared a seat, and one put out a foot stool, a foot scraper, and water for washing the feet. ",
