--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -350,12 +350,12 @@
   "pli-tv-kd10:4.3.2": "The Buddha sat down on the prepared seat and washed his feet. ",
   "pli-tv-kd10:4.3.3": "When they had bowed and sat down, ",
   "pli-tv-kd10:4.3.4": "the Buddha said to them, ",
-  "pli-tv-kd10:4.3.5": "“I hope you are all keeping well, Anuruddha, I hope you’re getting by. ",
+  "pli-tv-kd10:4.3.5": "“I hope you’re all keeping well, Anuruddha, I hope you’re getting by. ",
   "pli-tv-kd10:4.3.6": "I hope you’re not having any trouble getting almsfood?” ",
-  "pli-tv-kd10:4.3.7": "“We are keeping well, Venerable Sir, we’re getting by. ",
+  "pli-tv-kd10:4.3.7": "“We’re keeping well, Venerable Sir, we’re getting by. ",
   "pli-tv-kd10:4.3.8": "We’re not having any trouble getting almsfood.” ",
-  "pli-tv-kd10:4.3.9": "“I hope you’re living together in harmony, without dispute, blending like milk and water, and that you regard one another with affection?” ",
-  "pli-tv-kd10:4.3.10": "“Yes, we are living together in harmony, without dispute, blending like milk and water, and we regard one another with affection.” ",
+  "pli-tv-kd10:4.3.9": "“I hope you’re living together in peace and harmony, blending like milk and water, and regarding one another with affection?” ",
+  "pli-tv-kd10:4.3.10": "“Yes, we are.” ",
   "pli-tv-kd10:4.3.11": "“And how do you do this?” ",
   "pli-tv-kd10:4.4.1": "“I think like this, ",
   "pli-tv-kd10:4.4.2": "‘How fortunate I am to be living with such fellow monastics!’ ",
