--- a/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga7/ud7.9_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud7.9:0.1": "Innige Sprüche ",
+  "ud7.9:0.1": "Innige Sprüche 7.9 ",
   "ud7.9:0.2": "7.9 Der Brunnen ",
   "ud7.9:1.1": "So habe ich es gehört: ",
   "ud7.9:1.2": "Einmal wanderte der Buddha im Land der Maller mit einem großen Saṅgha von Mönchen und Nonnen. Da kam er zu einem mallischen Brahmanendorf namens Thūṇa. ",
