--- a/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.3_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud8.3:0.1": "Innige Sprüche ",
+  "ud8.3:0.1": "Innige Sprüche 8.3 ",
   "ud8.3:0.2": "8.3 Über das Erlöschen (3) ",
   "ud8.3:1.1": "So habe ich es gehört: ",
   "ud8.3:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
