--- a/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.9_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.9_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud8.9:0.1": "Innige Sprüche ",
+  "ud8.9:0.1": "Innige Sprüche 8.9 ",
   "ud8.9:0.2": "8.9 Mit Dabba (1) ",
   "ud8.9:1.1": "So habe ich es gehört: ",
   "ud8.9:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
