--- a/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga8/ud8.10_translation-de-sabbamitta.json
@@ -1,5 +1,5 @@
 {
-  "ud8.10:0.1": "Innige Sprüche ",
+  "ud8.10:0.1": "Innige Sprüche 8.10 ",
   "ud8.10:0.2": "8.10 Mit Dabba (2) ",
   "ud8.10:1.1": "So habe ich es gehört: ",
   "ud8.10:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
