--- a/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
@@ -1,4 +1,5 @@
 {
   "an11.992-1151:0.1": "Discours Sous Forme De Listes 11.992–1151",
-  "an11.992-1151:0.2": "Premier groupe de cinquante discours"
+  "an11.992-1151:0.2": "Premier groupe de cinquante discours",
+  "an11.992-1151:1.1": "(…) de l’aversion"
 }
