--- a/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
@@ -3,5 +3,6 @@
   "an11.992-1151:0.2": "Premier groupe de cinquante discours",
   "an11.992-1151:1.1": "(…) de l’aversion",
   "an11.992-1151:1.2": "de la délusion",
-  "an11.992-1151:1.3": "de la colère"
+  "an11.992-1151:1.3": "de la colère",
+  "an11.992-1151:1.4": "de la rancune"
 }
