--- a/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
@@ -4,5 +4,6 @@
   "an11.992-1151:1.1": "(…) de l’aversion",
   "an11.992-1151:1.2": "de la délusion",
   "an11.992-1151:1.3": "de la colère",
-  "an11.992-1151:1.4": "de la rancune"
+  "an11.992-1151:1.4": "de la rancune",
+  "an11.992-1151:1.5": "du dénigrement"
 }
