--- a/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
@@ -5,5 +5,6 @@
   "an11.992-1151:1.2": "de la délusion",
   "an11.992-1151:1.3": "de la colère",
   "an11.992-1151:1.4": "de la rancune",
-  "an11.992-1151:1.5": "du dénigrement"
+  "an11.992-1151:1.5": "du dénigrement",
+  "an11.992-1151:1.6": "de la jalousie"
 }
