--- a/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.992-1151_translation-fr-sekha.json
@@ -7,5 +7,6 @@
   "an11.992-1151:1.4": "de la rancune",
   "an11.992-1151:1.5": "du dénigrement",
   "an11.992-1151:1.6": "de l'insolence",
-  "an11.992-1151:1.8": "de l’avarice"
+  "an11.992-1151:1.8": "de l’avarice",
+  "an11.992-1151:1.9": "de l’hypocrisie"
 }
