--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "sn22.57:11.7": "Wenn Berührung aufhört, hören Entscheidungen auf. ",
   "sn22.57:11.8": "Die Übung, die zum Aufhören von Entscheidungen führt, ist einfach dieser edle achtfache Pfad … ",
   "sn22.57:14.1": "Und was ist Bewusstsein? ",
-  "sn22.57:14.2": "Es gibt sechs Klassen von Bewusstsein: "
+  "sn22.57:14.2": "Es gibt sechs Klassen von Bewusstsein: ",
+  "sn22.57:14.3": "Sehbewusstsein, Hörbewusstsein, Riechbewusstsein, Schmeckbewusstsein, Körperbewusstsein und Geistbewusstsein. "
 }
