--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "sn22.57:14.1": "Und was ist Bewusstsein? ",
   "sn22.57:14.2": "Es gibt sechs Klassen von Bewusstsein: ",
   "sn22.57:14.3": "Sehbewusstsein, Hörbewusstsein, Riechbewusstsein, Schmeckbewusstsein, Körperbewusstsein und Geistbewusstsein. ",
-  "sn22.57:14.4": "Das nennt man Bewusstsein. "
+  "sn22.57:14.4": "Das nennt man Bewusstsein. ",
+  "sn22.57:14.5": "Bewusstsein entsteht aus Namen und Form. "
 }
