--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "sn22.57:14.3": "Sehbewusstsein, Hörbewusstsein, Riechbewusstsein, Schmeckbewusstsein, Körperbewusstsein und Geistbewusstsein. ",
   "sn22.57:14.4": "Das nennt man Bewusstsein. ",
   "sn22.57:14.5": "Bewusstsein entsteht aus Namen und Form. ",
-  "sn22.57:14.6": "Wenn Name und Form aufhören, hört Bewusstsein auf. "
+  "sn22.57:14.6": "Wenn Name und Form aufhören, hört Bewusstsein auf. ",
+  "sn22.57:14.7": "Die Übung, die zum Aufhören des Bewusstseins führt, ist einfach dieser edle achtfache Pfad: nämlich "
 }
