--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "sn22.57:14.4": "Das nennt man Bewusstsein. ",
   "sn22.57:14.5": "Bewusstsein entsteht aus Namen und Form. ",
   "sn22.57:14.6": "Wenn Name und Form aufhören, hört Bewusstsein auf. ",
-  "sn22.57:14.7": "Die Übung, die zum Aufhören des Bewusstseins führt, ist einfach dieser edle achtfache Pfad: nämlich "
+  "sn22.57:14.7": "Die Übung, die zum Aufhören des Bewusstseins führt, ist einfach dieser edle achtfache Pfad: nämlich ",
+  "sn22.57:14.8": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. "
 }
