--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "sn22.57:14.6": "Wenn Name und Form aufhören, hört Bewusstsein auf. ",
   "sn22.57:14.7": "Die Übung, die zum Aufhören des Bewusstseins führt, ist einfach dieser edle achtfache Pfad: nämlich ",
   "sn22.57:14.8": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. ",
-  "sn22.57:15.1": "In dem Glück und dem Hochgefühl, die aus Bewusstsein entstehen: Darin bestehen die vorteilhaften Folgen. "
+  "sn22.57:15.1": "In dem Glück und dem Hochgefühl, die aus Bewusstsein entstehen: Darin bestehen die vorteilhaften Folgen. ",
+  "sn22.57:15.3": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. "
 }
