--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.26_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn22.26:1.8": "Da kam mir der Gedanke: ",
   "sn22.26:1.9": "‚In dem Glück und dem Hochgefühl, die aus Form entstehen: Darin bestehen die vorteilhaften Folgen. ",
   "sn22.26:1.10": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
-  "sn22.26:1.11": "Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen. ",
+  "sn22.26:1.11": "Das Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen. ",
   "sn22.26:1.12": "In dem Glück und dem Hochgefühl, die aus Gefühl … ",
   "sn22.26:1.15": "Wahrnehmung … ",
   "sn22.26:1.16": "Entscheidungen … ",
