--- a/translation/de/sabbamitta/sutta/sn/sn14/sn14.31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn14/sn14.31_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn14.31:2.1": "Da kam mir der Gedanke: ",
   "sn14.31:2.2": "‚In dem Glück und dem Hochgefühl, die aus dem Erdelement entstehen: Darin bestehen die vorteilhaften Folgen. ",
   "sn14.31:2.3": "Dass das Erdelement unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
-  "sn14.31:2.4": "Sehnen und Begehren nach dem Erdelement ausräumen und aufgeben: Darin besteht das Entrinnen. ",
+  "sn14.31:2.4": "Das Sehnen und Begehren nach dem Erdelement ausräumen und aufgeben: Darin besteht das Entrinnen. ",
   "sn14.31:2.5": "In dem Glück und dem Hochgefühl, die aus dem Wasserelement entstehen … ",
   "sn14.31:2.6": "In dem Glück und dem Hochgefühl, die aus dem Feuerelement entstehen … ",
   "sn14.31:2.7": "In dem Glück und dem Hochgefühl, die aus dem Luftelement entstehen: Darin bestehen die vorteilhaften Folgen. ",
