--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "sn22.57:2.7": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. ",
   "sn22.57:3.1": "In dem Glück und dem Hochgefühl, die aus Form entstehen: Darin bestehen die vorteilhaften Folgen. ",
   "sn22.57:3.3": "Dass Form unbeständig ist, voller Leiden, dass sie zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
-  "sn22.57:3.5": "Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen. ",
+  "sn22.57:3.5": "Das Sehnen und Begehren nach Form ausräumen und aufgeben: Darin besteht das Entrinnen. ",
   "sn22.57:4.1": "Alle Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben, ",
   "sn22.57:4.2": "die ihre vorteilhaften und nachteiligen Folgen und das Entrinnen davon unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Form üben: Sie üben gut. ",
   "sn22.57:4.3": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. ",
