--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.57_translation-de-sabbamitta.json
@@ -65,5 +65,5 @@
   "sn22.57:14.8": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. ",
   "sn22.57:15.1": "In dem Glück und dem Hochgefühl, die aus Bewusstsein entstehen: Darin bestehen die vorteilhaften Folgen. ",
   "sn22.57:15.3": "Dass Bewusstsein unbeständig ist, voller Leiden, dass es zugrunde gehen muss: Darin bestehen die nachteiligen Folgen. ",
-  "sn22.57:15.5": "Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen. "
+  "sn22.57:15.5": "Das Sehnen und Begehren nach Bewusstsein ausräumen und aufgeben: Darin besteht das Entrinnen. "
 }
